--- a/frontend/swag/landingpage.html
+++ b/frontend/swag/landingpage.html
@@ -137,6 +137,92 @@
         margin-bottom: 0;
         text-transform: uppercase;
       }
+
+      /*
+      The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact.
+      */
+      #abc {
+      width:100%;
+      height:100%;
+      opacity:.9;
+      top:0;
+      left:0;
+      display:none;
+      position:fixed;
+      background-color:#a8a8a8;
+      overflow:auto
+      }
+
+      /*
+      The following is the style for the popout screen.
+      */
+      div#popupContact {
+      position:absolute;
+      left:50%;
+      top:17%;
+      margin-left:-202px;
+      font-family:'Raleway',sans-serif;
+      }
+
+
+      #popupContact{
+        align-content: bottom;
+      }
+      #wrapper{
+        text-align: center;
+        align-content: center;
+      }
+
+      /*
+        The following the style for the button that comes out.
+      */
+      #newWindow{
+        width: 800px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background-color: #36454F;
+        left: 50%;
+        margin-left: -25%;
+        border-radius: 5%;
+        border:4px solid #fff;
+
+      }
+      /*
+        The following closes the popout screen.
+      */
+      #button-close{
+        background-color: #e74c3c;
+        color: #ffffff;
+        float: right;
+      }
+      #wrapper{
+        text-align: center;
+        align-content: center;
+
+      }
+
+      }
+      #content{
+        margin-top: 50%;
+      }
+      #graphic{
+        border:5px solid #fff;
+      }
+
+      #assign-NFC {
+        background-color: green;
+        color: white;
+        border-radius: 20%;
+        height: 40px;
+        width: 130px;
+        margin-left: 43%;
+        font-family:'Raleway',sans-serif;
+      }
+
+
+
+
+
     </style>
 
 
@@ -148,6 +234,11 @@
   </head>
 
   <body>
+
+
+
+
+
 <div class="logo">
     <img src="optum.png" alt="optum" style="width:250px;height:80px;float:left;">
   </div>
@@ -163,19 +254,46 @@
         <input type="password" class="form-control" id="pwd">
       </div>
     </form>
-    <a style="float: right; margin-right: 47%; margin-top: 5%;" class="btn btn-primary btn-xl" href="nightDash.HTML">LOGIN</a>
+    <a style="float: right; margin-right: 47%; margin-top: 5%;" onclick="div_show()" class="btn btn-primary btn-xl">LOGIN</a>
       <!--<h1 id="title"> Optumistics <h1>-->
+
+
+      <div id="abc">
+
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+
+      <div id = "newWindow" class = "animated zoomIn">
+        <div id = "wrapper">
+          <button id = "button-close" onclick ="div_hide()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
+          <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+          <h1 style = "color: #ffffff; text-align: center;">scan patient</h1>
+
+
+        </div>
+      <hr>
+        <!-- The group buttons are the start, stop, and reset button that are grouped together for styling purposes. -->
+        <p style = "margin-left: 7%; color: #ffffff; font-size: 24px; font-family:'Raleway',sans-serif;">Please scan the patient's NFC card on the scanner if applicable</p>
+        <br/>
+        <div>
+        <button id="assign-NFC"><a style="margin-left: -4px;color:white; font-family:'Raleway',sans-serif; font-size: 20px; padding-top: 25px; padding-bottom: 25px; padding-left: 25px; padding-right: 27px;" href="nightDash.HTML" class="input-box">proceed</a></button>
+      </div>
+      </div>
+    </div>
+  </div>
+
+
     </div>
 
 
 
 
     <script>
-    //Function To Display keyboard
+    //Function To Display patient scan reminder
     function div_show() {
     document.getElementById('abc').style.display = "block";
     }
-    //Function to Hide keyboard
+    //Function to Hide patient scan reminder
     function div_hide(){
     document.getElementById('abc').style.display = "none";
     }
