--- a/frontend/swag/landingpage.html
+++ b/frontend/swag/landingpage.html
@@ -21,7 +21,10 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
     <style>
+
+    @import "http://fonts.googleapis.com/css?family=Raleway";
     body {
       font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
     .btn-default {
