--- a/frontend/swag/register.html
+++ b/frontend/swag/register.html
@@ -336,7 +336,7 @@
     <hr>
       <!-- The group buttons are the start, stop, and reset button that are grouped together for styling purposes. -->
       <p style = "margin-left: 30%; color: #ffffff; font-size: 24px;">please sign in the patient below</p>
-      <select id = "patientSignUp" style = "margin-left: 46%;">
+      <select id = "patientSignUp" style = "margin-left: 43%;">
       </select></br>
       <button id = "signInButton" style = "margin-top: 2%;margin-left: 46%;"onclick = "div_show2()">sign in</button></br>
       <div id = "registerNFC" class = "animated fadeIn">
@@ -454,7 +454,7 @@
 
 
     <div>
-      <button id="continue" onclick="hide_div()" style="border-radius: 20%;margin-left: 45%; width: 80px; height:30px;" class="input-box">submit</button>
+      <button id="continue" style="border-radius: 20%;margin-left: 45%; width: 80px; height:30px;" class="input-box">submit</button>
     </div>
     <br/>
 
@@ -546,17 +546,66 @@
 
   <div id="new-appointment">
   <div>
-  <label class="input-label">start time: </label>
-  <div class="container">
-    <input id="input-a" value="" data-default="20:48">
-    <button type="button" id="button-a">Check the  minutes</button>
-  </div>
+  <label  class="input-label">start time: </label>
+
+    <select id="appointment_start_time_hr" class="input-box">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>10</option>
+      <option>11</option>
+      <option>12</option>
+    </select>
+    <label class="input-box" style="color:white; font-size: 15px;">:</label>
+    <select id="appointment_start_time_min" class="input-box">
+      <option>00</option>
+      <option>10</option>
+      <option>20</option>
+      <option>30</option>
+      <option>40</option>
+      <option>50</option>
+    <select>
+    <select id="am_pm_start" class="input-box">
+      <option>am</option>
+      <option>pm</option>
+    </select>
 
 <br/>
 <div>
 <label class="input-label">end time: </label>
-<select id="appointment_end_time" class="input-box">
-
+<select id="appointment_end_time_hr" class="input-box">
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+    <option>6</option>
+    <option>7</option>
+    <option>8</option>
+    <option>9</option>
+    <option>10</option>
+    <option>11</option>
+    <option>12</option>
+  </select>
+  <label class="input-box" style="color:white; font-size: 15px;">:</label>
+  <select id="appointment_end_time_min" class="input-box">
+    <option>00</option>
+    <option>10</option>
+    <option>20</option>
+    <option>30</option>
+    <option>40</option>
+    <option>50</option>
+  <select>
+  <select id="am_pm_end"class="input-box">
+    <option>am</option>
+    <option>pm</option>
+  </select>
 </select>
 </div>
 <br/>
@@ -582,7 +631,7 @@
     <!-- Form code begins -->
 
 
-        <input style="margin-left: 310px; width: 130px; margin-top: -30px;" class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+        <input style="margin-left: 310px; width: 130px; margin-top: -30px;" class="form-control" id="appointment_date" name="date" placeholder="yyyy-mm-dd" type="text"/>
 
      <!-- Form code ends -->
 
@@ -626,7 +675,7 @@ $( document ).ready(function(){
       $.each(bracelets, function(i, brace)
       { //Get every entry in the NFC db that are PROVIDERS
 
-        $("#patientSignUp").append("<option class='swag3' id=" +brace.patient_id +" value = " + i + ">"+ brace.patient_first_name + " " + brace.patient_last_name + "</option>");
+        $("#patientSignUp").append("<option class='swag3' id=" +brace.appointment_id +" value = " + i + ">"+ brace.patient_first_name + " " + brace.patient_last_name + "</option>");
           $appointmentID = brace.appointment_id;
 
       });
@@ -705,7 +754,7 @@ $.ajax({
     success: function(data) {
       $.each(data, function(i, brace)
       { //Get every entry in the NFC db that are PROVIDERS
-        $("#appointment_patient_id").append("<option class='swag' id=" +brace.patient_id +" value = " + i + ">"+ brace.patient_first_name + " " + brace.patient_last_name + "</option>");
+        $("#appointment_patient_id").append("<option class='swag4' id=" +brace.patient_id +" value = " + i + ">"+ brace.patient_first_name + " " + brace.patient_last_name + "</option>");
       });
     },
     error: function (xhr, status, error) {
@@ -739,18 +788,20 @@ $.ajax({
 });
 
 $('#create_appointment').click(function() {
-    var appointment_start_time = $('#appointment_start_time').val(); // getting Appointment Start Time val()
-    var appointment_end_time = $('#appointment_end_time').val(); // getting Appointment End Time val()
-    var appointment_patient_id = $('#appointment_patient_id').val(); // getting Appointment Patient ID val()
-    var appointment_appointment_type_id = $('#appointment_appointment_type_id').val(); // getting Appointment Type ID val(). If null, type in null.
-    var appointment_status_id = $('#appointment_status_id').val(); // getting Appointment Status ID val()
+    var appointment_start_time = $('#appointment_start_time_hr').val() + ":" + $('#appointment_start_time_min').val(); // getting Appointment Start Time val()
+    var appointment_end_time = $('#appointment_end_time_hr').val() + ":" + $('#appointment_end_time_min').val(); // getting Appointment End Time val()
+    var appointment_patient_id = $(".swag4").attr('id'); // getting Appointment Patient ID val()
+    var appointment_appointment_type_id = $(".swag2").attr('id'); // getting Appointment Type ID val(). If null, type in null.
+    var appointment_status_id = 74; // getting Appointment Status ID val()
     var appointment_date = $('#appointment_date').val(); // getting Appointment Date val()
+    console.log(appointment_appointment_type_id);
     $.ajax({
         type: "POST",
-        url: "http://localhost:3000/general/insert/Appointment/:start_time/:end_time/:patient_id/:appointment_type_id/:status_id/:appointment_date/" +appointment_start_time +'/' +appointment_end_time +'/'
+        url: "http://localhost:3000/general/insert/Appointment/" +appointment_start_time +'/' +appointment_end_time +'/'
         +appointment_patient_id +'/' +appointment_appointment_type_id +'/' +appointment_status_id +'/' +appointment_date,
         success: function (insert_status) {
             $("#insert_status").append("Successful Insertion of Appointment</br>");
+            alert("insertion successful");
         },
         error: function (xhr, status, error) {
             console.log('Error: ' + error.message);
@@ -784,6 +835,24 @@ $('#submitTheNFC').click(function()
 });
 
 $("#continue").click(function(){
+  if($('#first-name').val() == "" || $('#last-name').val()== "" || $('#username').val()== "" || $('#password').val()== "" || $('#confirm-password').val()== "" || document.getElementById('person-type').value == 'select')
+  {
+    alert("please fill out missing fields and try again");
+
+  }
+
+  //alert(document.getElementById('password').value != document.getElementById('confirm-password').value);
+
+  else if(document.getElementById('password').value != document.getElementById('confirm-password').value)
+  {
+    alert("the passwords you entered do not match, please try again");
+    document.getElementById('confirm-password').value = "";
+    document.getElementById('password').value = "";
+
+  }
+
+  else{
+
   var provider_first_name = $('#first-name').val(); // getting Provider First Name val()
   var provider_last_name = $('#last-name').val(); // getting Provider Last Name val()
   var provider_username = $('#username').val(); // getting Provider Username val()
@@ -798,12 +867,20 @@ $("#continue").click(function(){
       url: "http://localhost:3000/general/insert/Provider_Information/" +provider_first_name +'/' +provider_last_name +'/' +provider_username +'/'
       +provider_password +'/' +provider_person_type_id +'/' + "74",
       success: function (insert_status) {
-
+        if(insert_status == "The username must be unique")
+        {
+          alert("This username is already taken, please choose another username and try again.");
+        }
+        else {
+          hide_div();
+        }
       },
       error: function (xhr, status, error) {
           console.log('Error: ' + error.message);
       },
   });
+
+}
 });
 
 
@@ -894,30 +971,16 @@ document.getElementById('abc2').style.display = "none";
 
 //hides popup and refreshes page
 function hide_div(){
-
-if($('#first-name').val() === "" || $('#last-name').val()=== "" || $('#username').val()=== "" || $('#password').val()=== "" || $('#confirm-password').val()=== "" || $(".swag2").attr('id') === 'select')
-{
-  alert("please fill out missing fields and try again");
-
-}
-
-else if(($('#password').val()).localeCompare($('#confirm-password').val()) === 0)
-{
-  alert("the passwords you entered do not match, please try again")
-
-}
-
-else{
 window.location.reload();
 document.getElementById('abc2').style.display = "none";
-}
+
 }
 
 $(document).ready(function(){
       var date_input=$('input[name="date"]'); //our date input has the name "date"
       var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
       var options={
-        format: 'mm/dd/yyyy',
+        format: 'yyyy-mm-dd',
         container: container,
         todayHighlight: true,
         autoclose: true,
